fixed size for captcha so indicator stays invisible

--- a/css/img_global.css
+++ b/css/img_global.css
@@ -33,6 +33,8 @@ form .trap {
 .captchaimage {
 	display: inline!important;
 	box-shadow: none!important;
+	width: 150px;
+	height: 30px;
 }
 
 .postarea table {
